--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.4.4",
+    "crypto-js": "^3.1.9-1",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
+    "jssha": "^2.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
