--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.0",
     "apollo-boost": "^0.4.4",
     "crypto-js": "^3.1.9-1",
     "graphql": "^14.5.4",
