--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.0",
     "apollo-boost": "^0.4.4",
     "crypto-js": "^3.1.9-1",
+    "cuid": "^2.1.6",
     "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
     "jssha": "^2.3.1",
