--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.4.1",
     "apollo-boost": "^0.4.4",
     "crypto-js": "^3.1.9-1",
     "cuid": "^2.1.6",
